@@ -2,10 +2,16 @@ package com.mecook.mecookbackend.application.query;
 
 import com.mecook.mecookbackend.application.dto.output.DishResponse;
 import com.mecook.mecookbackend.domain.model.Dish;
+import com.mecook.mecookbackend.domain.model.Ingredient;
 import com.mecook.mecookbackend.domain.repository.DishRepository;
+import com.mecook.mecookbackend.domain.exception.DishNotFoundException;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
 import java.util.List;
+import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -16,15 +22,25 @@ public class DishQueryService {
         this.dishRepository = dishRepository;
     }
 
-    public List<DishResponse> getAllDishes() {
-        List<Dish> dishes = dishRepository.findAll();
-        return dishes.stream()
-                .map(d -> new DishResponse(d.getId(), d.getName(), d.getDescription(), d.getIngredients()))
-                .toList();
+    @Async
+    public CompletableFuture<List<DishResponse>> getAllDishes() {
+        List<DishResponse> responses = dishRepository.findAll().stream()
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
+        return CompletableFuture.completedFuture(responses);
     }
 
-    public DishResponse getDishById(Long id) {
-        Dish dish = dishRepository.findById(id).orElseThrow(() -> new RuntimeException("Dish not found"));
-        return new DishResponse(dish.getId(), dish.getName(), dish.getDescription(), dish.getIngredients());
+    @Async
+    public CompletableFuture<DishResponse> getDishById(Long id) {
+        Dish dish = dishRepository.findById(id)
+                .orElseThrow(() -> new DishNotFoundException("Dish not found with id " + id));
+        return CompletableFuture.completedFuture(mapToResponse(dish));
+    }
+
+    private DishResponse mapToResponse(Dish dish) {
+        List<String> ingredientNames = dish.getIngredients().stream()
+                .map(Ingredient::getName)
+                .collect(Collectors.toList());
+        return new DishResponse(dish.getId(), dish.getName(), dish.getDescription(), ingredientNames);
     }
 }
